--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "ahmetbarut/csrf",
   "description": "Php csrf tokens",
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "version": "1.0",
   "license": "MIT",
   "authors": [
@@ -12,7 +12,7 @@
   ],
   "autoload": {
     "psr-4": {
-      "ahmetbarut\\csrf": "src"
+      "ahmetbarut\\csrf\\": "src"
     }
   }
 }
