--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "ahmetbarut/csrf",
   "description": "Php csrf tokens",
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "version": "1.0",
   "license": "MIT",
   "authors": [
