--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "ahmetbarut/csrf",
-  "description": "Php csrf tokens",
+  "description": "Php csrf token",
+  "keywords": ["csrf", "php-csrf"],
   "type": "package",
   "version": "1.1",
   "license": "MIT",
