--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "Php csrf token",
   "keywords": ["csrf", "php-csrf"],
   "type": "package",
-  "version": "v1.2",
+  "version": "1.2",
   "license": "MIT",
   "authors": [
     {
