--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,18 @@
 {
-  "name": "ahmetbarut/csrf",
-  "description": "Php csrf token",
-  "keywords": ["csrf", "php-csrf"],
-  "type": "package",
-  "version": "1.2",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Ahmet Barut",
-      "email": "iletisim@ahmetbarut.net"
-    }
-  ],
-  "autoload": {
-    "psr-4": {
-      "ahmetbarut\\Csrf\\": "src"
-    }
-  }
+    "name": "ahmetbarut/csrf",
+    "autoload": {
+        "psr-4": {
+            "ahmetbarut\\Csrf\\": "src/"
+        },
+        "files": [
+            "./src/helper.php"
+        ]
+    },
+    "authors": [
+        {
+            "name": "Ahmet Barut",
+            "email": "ahmetbarut588@gmail.com"
+        }
+    ],
+    "require": {}
 }
